# wlgtest

wlgtest/: CMakeLists.txt  azure-pipelines.yml
wlgtest/googletest/lib/: gtest_main.lib  gtest_maind.lib
